Data upload to Postgresql

--- a/wiki_movies.ipynb
+++ b/wiki_movies.ipynb
@@ -11,9 +11,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (1.5.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from pandas) (2022.2.1)\n",
       "Requirement already satisfied: numpy>=1.20.3 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from pandas) (1.23.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from pandas) (2022.2.1)\n",
       "Requirement already satisfied: six>=1.5 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -34,15 +34,15 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: matplotlib in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (3.6.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (4.37.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (21.3)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (1.4.4)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (0.11.0)\n",
       "Requirement already satisfied: pillow>=6.2.0 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (9.2.0)\n",
       "Requirement already satisfied: contourpy>=1.0.1 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (1.0.5)\n",
-      "Requirement already satisfied: numpy>=1.19 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (1.23.3)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (4.37.4)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (0.11.0)\n",
       "Requirement already satisfied: pyparsing>=2.2.1 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: numpy>=1.19 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from matplotlib) (1.23.3)\n",
       "Requirement already satisfied: six>=1.5 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -1163,28 +1163,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>44987</th>\n",
+       "      <th>28533</th>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 10769, 'n...</td>\n",
+       "      <td>38000000</td>\n",
+       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 18, '...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>59423</td>\n",
-       "      <td>tt0448621</td>\n",
-       "      <td>ko</td>\n",
-       "      <td>말아톤</td>\n",
-       "      <td>20-years-old Cho-Won (Cho Seung-Woo) is young ...</td>\n",
+       "      <td>309302</td>\n",
+       "      <td>tt2909116</td>\n",
+       "      <td>zh</td>\n",
+       "      <td>狼图腾</td>\n",
+       "      <td>In 1969, a young Beijing student, Chen Zhen, i...</td>\n",
        "      <td>...</td>\n",
-       "      <td>2005-01-27</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>117.0</td>\n",
-       "      <td>[{'iso_639_1': 'ko', 'name': '한국어/조선말'}]</td>\n",
+       "      <td>2015-02-19</td>\n",
+       "      <td>123205624.0</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>[{'iso_639_1': 'zh', 'name': '普通话'}, {'iso_639...</td>\n",
        "      <td>Released</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Marathon</td>\n",
+       "      <td>Wolf Totem</td>\n",
        "      <td>False</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>137.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1192,23 +1192,23 @@
        "</div>"
       ],
       "text/plain": [
-       "       adult belongs_to_collection budget  \\\n",
-       "44987  False                   NaN      0   \n",
+       "       adult belongs_to_collection    budget  \\\n",
+       "28533  False                   NaN  38000000   \n",
        "\n",
-       "                                                  genres homepage     id  \\\n",
-       "44987  [{'id': 18, 'name': 'Drama'}, {'id': 10769, 'n...      NaN  59423   \n",
+       "                                                  genres homepage      id  \\\n",
+       "28533  [{'id': 12, 'name': 'Adventure'}, {'id': 18, '...      NaN  309302   \n",
        "\n",
        "         imdb_id original_language original_title  \\\n",
-       "44987  tt0448621                ko            말아톤   \n",
+       "28533  tt2909116                zh            狼图腾   \n",
        "\n",
        "                                                overview  ... release_date  \\\n",
-       "44987  20-years-old Cho-Won (Cho Seung-Woo) is young ...  ...   2005-01-27   \n",
+       "28533  In 1969, a young Beijing student, Chen Zhen, i...  ...   2015-02-19   \n",
        "\n",
-       "      revenue runtime                          spoken_languages    status  \\\n",
-       "44987     0.0   117.0  [{'iso_639_1': 'ko', 'name': '한국어/조선말'}]  Released   \n",
+       "           revenue runtime                                   spoken_languages  \\\n",
+       "28533  123205624.0   116.0  [{'iso_639_1': 'zh', 'name': '普通话'}, {'iso_639...   \n",
        "\n",
-       "       tagline     title  video vote_average vote_count  \n",
-       "44987      NaN  Marathon  False          7.0       10.0  \n",
+       "         status  tagline       title  video vote_average vote_count  \n",
+       "28533  Released      NaN  Wolf Totem  False          6.4      137.0  \n",
        "\n",
        "[1 rows x 24 columns]"
       ]
@@ -1439,19 +1439,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>20254139</th>\n",
-       "      <td>210544</td>\n",
-       "      <td>553</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>841903335</td>\n",
+       "      <th>5523783</th>\n",
+       "      <td>56954</td>\n",
+       "      <td>959</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1217081607</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          userId  movieId  rating  timestamp\n",
-       "20254139  210544      553     4.0  841903335"
+       "         userId  movieId  rating   timestamp\n",
+       "5523783   56954      959     3.5  1217081607"
       ]
      },
      "execution_count": 17,
@@ -3829,7 +3829,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xv/vcndt0815kx4sxrj4496vy440000gp/T/ipykernel_12809/3746335845.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/var/folders/xv/vcndt0815kx4sxrj4496vy440000gp/T/ipykernel_16129/3746335845.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  budget = budget.str.replace(r'\\[\\d+\\]\\s*', '')\n"
      ]
     },
@@ -4580,6 +4580,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/xv/vcndt0815kx4sxrj4496vy440000gp/T/ipykernel_16129/3356424145.py:1: FutureWarning: null_counts is deprecated. Use show_counts instead\n",
+      "  ratings.info(null_counts=True)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -4594,14 +4602,6 @@
       " 3   timestamp  26024289 non-null  int64  \n",
       "dtypes: float64(1), int64(3)\n",
       "memory usage: 794.2 MB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/xv/vcndt0815kx4sxrj4496vy440000gp/T/ipykernel_12809/3356424145.py:1: FutureWarning: null_counts is deprecated. Use show_counts instead\n",
-      "  ratings.info(null_counts=True)\n"
      ]
     }
    ],
@@ -6486,7 +6486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 114,
    "id": "0923887d",
    "metadata": {},
    "outputs": [],
@@ -6511,7 +6511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 115,
    "id": "6dc545a4",
    "metadata": {},
    "outputs": [],
@@ -6521,7 +6521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 116,
    "id": "bf77d784",
    "metadata": {},
    "outputs": [],
@@ -6532,8 +6532,216 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 117,
+   "id": "d86e31db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "9aea497a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "74ba736c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "ac91b798",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "e436680d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "8e28fe3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "613c1602",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: sqlalchemy in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (1.4.41)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in /Users/satya/opt/anaconda3/envs/PythonData/lib/python3.9/site-packages (from sqlalchemy) (1.1.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "b8971da3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "f0ca0a61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from config import db_password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "3823a3cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5433/movie_data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "7d6d2468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine(db_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "ea38dfbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_df.to_sql(name='movies', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "ca052c30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "8e9088f2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing rows 0 to 1000000...Done. 20.558682918548584 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 41.70534110069275 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 63.44293212890625 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 84.93015313148499 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 109.16038513183594 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 130.69699788093567 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 152.59279918670654 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 175.90184998512268 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 198.4277060031891 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 225.53921794891357 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 250.78213906288147 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 276.31881403923035 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 302.365816116333 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 326.16020703315735 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 350.8460612297058 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 376.42307114601135 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 400.84622597694397 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 424.9468319416046 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 448.3939480781555 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 473.4141619205475 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 498.95486402511597 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 522.4485902786255 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 547.0288641452789 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 568.7522261142731 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 590.1168048381805 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 615.5753631591797 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 616.1031718254089 total seconds elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows_imported = 0\n",
+    "# get the start_time from time.time()\n",
+    "start_time = time.time()\n",
+    "for data in pd.read_csv('ratings.csv', chunksize=1000000):\n",
+    "    print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
+    "    data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "    rows_imported += len(data)\n",
+    "\n",
+    "    # add elapsed time to final print out\n",
+    "    print(f'Done. {time.time() - start_time} total seconds elapsed')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b68b8bfb",
+   "id": "507a72ef",
    "metadata": {},
    "outputs": [],
    "source": []
