--- a/wiki_movies.ipynb
+++ b/wiki_movies.ipynb
@@ -132,7 +132,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "c9b1b9d3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1477,7 +1479,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "62fd6eed",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4954,7 +4958,9 @@
    "cell_type": "code",
    "execution_count": 97,
    "id": "e1c00c59",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -5743,7 +5749,9 @@
    "cell_type": "code",
    "execution_count": 106,
    "id": "cd2eaa08",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -6574,6 +6582,251 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 134,
+   "id": "86d22ae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imdb_id</th>\n",
+       "      <th>kaggle_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>belongs_to_collection</th>\n",
+       "      <th>wikipedia_url</th>\n",
+       "      <th>imdb_link</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>...</th>\n",
+       "      <th>rating_0.5</th>\n",
+       "      <th>rating_1.0</th>\n",
+       "      <th>rating_1.5</th>\n",
+       "      <th>rating_2.0</th>\n",
+       "      <th>rating_2.5</th>\n",
+       "      <th>rating_3.0</th>\n",
+       "      <th>rating_3.5</th>\n",
+       "      <th>rating_4.0</th>\n",
+       "      <th>rating_4.5</th>\n",
+       "      <th>rating_5.0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0098987</td>\n",
+       "      <td>9548</td>\n",
+       "      <td>The Adventures of Ford Fairlane</td>\n",
+       "      <td>The Adventures of Ford Fairlane</td>\n",
+       "      <td>Kojak. Columbo. Dirty Harry. Wimps.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/The_Adventures_o...</td>\n",
+       "      <td>https://www.imdb.com/title/tt0098987/</td>\n",
+       "      <td>104.00</td>\n",
+       "      <td>49,000,000.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0098994</td>\n",
+       "      <td>25501</td>\n",
+       "      <td>After Dark, My Sweet</td>\n",
+       "      <td>After Dark, My Sweet</td>\n",
+       "      <td>All they risked was everything.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/After_Dark,_My_S...</td>\n",
+       "      <td>https://www.imdb.com/title/tt0098994/</td>\n",
+       "      <td>114.00</td>\n",
+       "      <td>6,000,000.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0099005</td>\n",
+       "      <td>11856</td>\n",
+       "      <td>Air America</td>\n",
+       "      <td>Air America</td>\n",
+       "      <td>The few. The proud. The totally insane.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Air_America_(film)</td>\n",
+       "      <td>https://www.imdb.com/title/tt0099005/</td>\n",
+       "      <td>112.00</td>\n",
+       "      <td>35,000,000.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0099012</td>\n",
+       "      <td>8217</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Alice_(1990_film)</td>\n",
+       "      <td>https://www.imdb.com/title/tt0099012/</td>\n",
+       "      <td>102.00</td>\n",
+       "      <td>12,000,000.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0099018</td>\n",
+       "      <td>25943</td>\n",
+       "      <td>Almost an Angel</td>\n",
+       "      <td>Almost an Angel</td>\n",
+       "      <td>Who does he think he is?</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Almost_an_Angel</td>\n",
+       "      <td>https://www.imdb.com/title/tt0099018/</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>25,000,000.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>26.00</td>\n",
+       "      <td>37.00</td>\n",
+       "      <td>46.00</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>11.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     imdb_id  kaggle_id                            title  \\\n",
+       "0  tt0098987       9548  The Adventures of Ford Fairlane   \n",
+       "1  tt0098994      25501             After Dark, My Sweet   \n",
+       "2  tt0099005      11856                      Air America   \n",
+       "3  tt0099012       8217                            Alice   \n",
+       "4  tt0099018      25943                  Almost an Angel   \n",
+       "\n",
+       "                    original_title                                  tagline  \\\n",
+       "0  The Adventures of Ford Fairlane      Kojak. Columbo. Dirty Harry. Wimps.   \n",
+       "1             After Dark, My Sweet          All they risked was everything.   \n",
+       "2                      Air America  The few. The proud. The totally insane.   \n",
+       "3                            Alice                                      NaN   \n",
+       "4                  Almost an Angel                 Who does he think he is?   \n",
+       "\n",
+       "  belongs_to_collection                                      wikipedia_url  \\\n",
+       "0                   NaN  https://en.wikipedia.org/wiki/The_Adventures_o...   \n",
+       "1                   NaN  https://en.wikipedia.org/wiki/After_Dark,_My_S...   \n",
+       "2                   NaN   https://en.wikipedia.org/wiki/Air_America_(film)   \n",
+       "3                   NaN    https://en.wikipedia.org/wiki/Alice_(1990_film)   \n",
+       "4                   NaN      https://en.wikipedia.org/wiki/Almost_an_Angel   \n",
+       "\n",
+       "                               imdb_link              runtime  \\\n",
+       "0  https://www.imdb.com/title/tt0098987/               104.00   \n",
+       "1  https://www.imdb.com/title/tt0098994/               114.00   \n",
+       "2  https://www.imdb.com/title/tt0099005/               112.00   \n",
+       "3  https://www.imdb.com/title/tt0099012/               102.00   \n",
+       "4  https://www.imdb.com/title/tt0099018/                95.00   \n",
+       "\n",
+       "                budget  ...           rating_0.5           rating_1.0  \\\n",
+       "0        49,000,000.00  ...                 0.00                 0.00   \n",
+       "1         6,000,000.00  ...                 0.00                 0.00   \n",
+       "2        35,000,000.00  ...                 0.00                 0.00   \n",
+       "3        12,000,000.00  ...                 0.00                 0.00   \n",
+       "4        25,000,000.00  ...                 3.00                 0.00   \n",
+       "\n",
+       "            rating_1.5           rating_2.0           rating_2.5  \\\n",
+       "0                 0.00                 0.00                 0.00   \n",
+       "1                 0.00                 0.00                 0.00   \n",
+       "2                 0.00                 0.00                 0.00   \n",
+       "3                 0.00                 0.00                 0.00   \n",
+       "4                 3.00                 2.00                 5.00   \n",
+       "\n",
+       "            rating_3.0           rating_3.5           rating_4.0  \\\n",
+       "0                 0.00                 0.00                 0.00   \n",
+       "1                 0.00                 0.00                 0.00   \n",
+       "2                 0.00                 0.00                 0.00   \n",
+       "3                 0.00                 0.00                 0.00   \n",
+       "4                26.00                37.00                46.00   \n",
+       "\n",
+       "            rating_4.5           rating_5.0  \n",
+       "0                 0.00                 0.00  \n",
+       "1                 0.00                 0.00  \n",
+       "2                 0.00                 0.00  \n",
+       "3                 0.00                 0.00  \n",
+       "4                16.00                11.00  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_with_ratings_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 121,
    "id": "e436680d",
    "metadata": {},
@@ -6581,6 +6834,14 @@
    "source": [
     "import re"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25226af0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -6676,7 +6937,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "ca052c30",
+   "id": "774dcdb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6741,7 +7002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "507a72ef",
+   "id": "d0b710d0",
    "metadata": {},
    "outputs": [],
    "source": []
